<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="app.baldphone.neo.settings.ui.SettingsFragment"
        android:label="@string/neo_settings">
        <action
            android:id="@+id/action_settings_to_calls"
            app:destination="@id/callsSettingsFragment" />
        <action
            android:id="@+id/action_settings_to_system"
            app:destination="@id/systemSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/callsSettingsFragment"
        android:name="app.baldphone.neo.settings.ui.CallsSettingsFragment"
        android:label="@string/settings_section_calls">
    </fragment>

    <!-- SYSTEM -->
    <fragment
        android:id="@+id/systemSettingsFragment"
        android:name="app.baldphone.neo.settings.system.SystemSettingsFragment"
        android:label="@string/settings_system">
        <action
            android:id="@+id/action_system_to_permissions"
            app:destination="@id/permissionsFragment" />
    </fragment>

    <fragment
        android:id="@+id/permissionsFragment"
        android:name="app.baldphone.neo.settings.system.PermissionsFragment"
        android:label="@string/permissions_part">
        <deepLink app:uri="myapp://settings/system/permissions" />
    </fragment>
</navigation>
