<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        style="@style/BackgroundText.Medium.Plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onb_accessibility_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        style="@style/BackgroundText.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onb_accessibility_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <RadioGroup
        android:id="@+id/rgLevels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <RadioButton
            android:id="@+id/rbBasic"
            style="@style/BackgroundText.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/onb_level_basic" />

        <RadioButton
            android:id="@+id/rbEnhanced"
            style="@style/BackgroundText.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/onb_level_enhanced" />

        <RadioButton
            android:id="@+id/rbFull"
            style="@style/BackgroundText.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/onb_level_full" />

    </RadioGroup>

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/cbHapticFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="start|center_vertical"
        android:minHeight="64dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:switchPadding="16dp"
        android:text="@string/onb_haptic_feedback_title"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:textSize="@dimen/medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgLevels" />

    <com.bald.uriah.baldphone.views.BaldButton
        android:id="@+id/btnTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/onb_test_action"
        android:textSize="@dimen/large"
        app:layout_constraintBottom_toTopOf="@+id/btnContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbHapticFeedback" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/Bald.Button.FullWidth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onb_action_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
